rust/macros/tests/invalid/target/debug/deps/single_argument_rs-ee0d3bcdb8e88801.d
/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-ee0d3bcdb8e88801.rmeta: single-argument.rs

/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-ee0d3bcdb8e88801.d: single-argument.rs

single-argument.rs:
